Unexpected round errors in FreetypeFontScaler

XMLWordPrintable

    • 2d
    • b04

        In 'Java_sun_font_FreetypeFontScaler_createScalerContextNative', 'context->transform.xx' and '.yy' values are sometimes 65535 instead of 65536.

        Problem case:
        context->transform.xx=65535 yx=0 xy=0 yy=65535 ptsz=46.590909 dmat[0]=46.590909 (float)dmat[0]=46.590908

        Normal case:
        context->transform.xx=65536 yx=0 xy=0 yy=65536 ptsz=18.000000 dmat[0]=18.000000 (float)dmat[0]=18.000000

              Assignee:
              Toshio Nakamura
              Reporter:
              Toshio Nakamura
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: