8299255: Unexpected round errors in FreetypeFontScaler

Backport-of: 26868c1ac471c3b305b1d15e3075de0baa9319d2